separeted render and view files, not finished yet

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
   <body>
     <div class="root">
       <aside class="sidebar">
-        <div class="sidebar-title-container">
+        <!-- <div class="sidebar-title-container">
           <h3 class="sidebar-title">My Projects</h3>
-          <!-- <span class="sidebar-toggle-btn">&#9776;</span> -->
         </div>
         <div class="projects-list"></div>
         <div class="add-project">
@@ -43,7 +42,7 @@
               <button type="submit">add project</button>
             </div>
           </form>
-        </div>
+        </div> -->
       </aside>
       <main class="main">
         <div class="main-center content-center">
